# repobrain

./: .dockerignore  .env.template  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  FACTORY_INVENTORY.md  INSTALL.md  LICENSE  README.md  README_CN.md  README_ES.md  SECURITY.md  SYSTEM_MANIFEST.md  VERSIONING.md  agent_memory.json  docker-compose.yml  mcp_servers.json  mission.md  next.config.mjs  opencode.json  package-lock.json  package.json  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
api/: factory_router.js
artifacts/: chat_history.md  plan_20260302_fix_latest_failed_ci.md  plan_20260404_opencmo_ask_boundary_eval.md  plan_20260413_multilang_semantic_graph.md  plan_20260413_multilang_semantic_validation.md  plan_agent_repo_init_modes.md  plan_agent_repo_init_portability.md  plan_agent_repo_init_skill.md  plan_doc_sync_fix_2026-02-10.md  plan_enterprise_architecture_assessment_20260302.md  (+16 more)
cli/: README.md  pyproject.toml
cli/src/ag_cli/: __init__.py  cli.py  reader.py
cli/src/ag_cli/templates/.antigravity/: conventions.md
cli/src/rb_cli/: __init__.py  cli.py
cli/tests/: test_cli_doctor.py  test_cli_force.py  test_cli_report.py  test_cli_version.py  test_hub_discovery.py  test_reader.py
engine/: .env.example  install.bat  install.sh  pyproject.toml
engine/antigravity_engine/: __init__.py  __main__.py  _cli_entry.py  config.py  mcp_client.py  memory.py
engine/antigravity_engine/hub/: __init__.py  __main__.py  _constants.py  _merkle.py  _utils.py  agents.py  ask_pipeline.py  ask_tools.py  contracts.py  host_llm.py  host_runner.py  knowledge_graph.py  mcp_server.py  module_grouping.py  pipeline.py  refresh_pipeline.py  retrieval_graph.py  scanner.py  semantic_index.py  structure.py
engine/antigravity_engine/hub/language_adapters/: __init__.py  base.py  generic_adapter.py  go_adapter.py  python_adapter.py  typescript_adapter.py
engine/antigravity_engine/sandbox/: __init__.py  factory.py  microsandbox_exec.py
engine/antigravity_engine/skills/: agent_repo_init_core.py  loader.py
engine/antigravity_engine/skills/agent-repo-init/: SKILL.md  tools.py
engine/antigravity_engine/skills/graph-retrieval/: SKILL.md  __init__.py  tools.py
engine/antigravity_engine/skills/knowledge-layer/: SKILL.md  __init__.py  tools.py
engine/antigravity_engine/skills/research/: SKILL.md  tools.py
engine/antigravity_engine/tools/: __init__.py  demo_tool.py  execution_tool.py  mcp_tools.py  memory_tools.py  openai_proxy.py
engine/repobrain_engine/: __init__.py
engine/tests/: conftest.py  test_agent_repo_init_skill.py  test_ask_fallback_detection.py  test_ask_tools.py  test_cli_entry.py  test_create_model.py  test_execution_tool.py  test_factory.py  test_graph_skills.py  test_host_delegation_refresh.py  test_host_runner.py  test_hub_agents_import.py  test_hub_merkle.py  test_hub_module_grouping.py  test_hub_pipeline.py  test_hub_scanner.py  test_hub_semantic_graph.py  test_install_engine_hook.py  test_local_sandbox.py  test_mcp.py  test_mcp_integration.py  test_mcp_server_errors.py  test_memory.py  test_memory_markdown.py  test_memory_tools.py  test_microsandbox_sandbox.py  test_path_resolution.py  test_plugin_packaging.py  test_refresh_retry.py  test_repo_contract_release_versions.py  test_skills_loader.py
pages/: 404.js  (+14 more)
(+404 files in other folders)
