[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antigravity-cli"
version = "1.0.0"
description = "Inject Antigravity context files and offline helpers into any project."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ag = "ag_cli.cli:app"

# ── Hatch build configuration ──────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/ag_cli"]
