[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repobrain-cli"
version = "2.0.1"
description = "Inject RepoBrain context files and offline helpers into any project."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.33.0,<3",
]

[project.scripts]
rb = "rb_cli.cli:app"

# ── Hatch build configuration ──────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/rb_cli"]
