[project]
name = "antigravity-engine"
version = "0.2.0"
description = "Dynamic multi-agent Knowledge Hub and MCP server"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.33.0,<3",
    "mcp[cli]>=1.0.0,<2",
    "openai-agents[litellm]>=0.12,<0.15",
]

[project.scripts]
ag-ask = "antigravity_engine._cli_entry:ask_main"
ag-refresh = "antigravity_engine._cli_entry:refresh_main"
ag-mcp = "antigravity_engine.hub.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antigravity_engine"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
