[project]
name = "repobrain-engine"
version = "0.3.1"
description = "Repository knowledge engine with grounded Q&A and optional MCP server"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.33.0,<3",
    "mcp[cli]>=1.0.0,<2",
    "openai-agents[litellm]>=0.12,<0.18",
    "tomli>=2.0,<3; python_version < \"3.11\"",
]

[project.scripts]
rb-ask = "repobrain_engine._cli_entry:ask_main"
rb-refresh = "repobrain_engine._cli_entry:refresh_main"
rb-mcp = "repobrain_engine.hub.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repobrain_engine"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
